RESOLVED FIXED283931
[iPadOS] Outlook native app: channels tab does not handle trackpad two-finger pans to scroll
https://bugs.webkit.org/show_bug.cgi?id=283931
Summary [iPadOS] Outlook native app: channels tab does not handle trackpad two-finger...
Wenson Hsieh
Reported 2024-12-02 11:53:11 PST
Attachments
Wenson Hsieh
Comment 1 2024-12-02 12:16:29 PST
EWS
Comment 2 2024-12-03 11:10:14 PST
Committed 287293@main (d259d7a2d4e9): <https://commits.webkit.org/287293@main> Reviewed commits have been landed. Closing PR #37333 and removing active labels.
Wenson Hsieh
Comment 3 2024-12-03 12:12:49 PST
*** Bug 258016 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.